lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/MUSIK.MID
vti_encoding:SR|utf8-nl
vti_author:SR|Diehl
vti_modifiedby:SR|Diehl
vti_timecreated:TR|29 Nov 2000 12:34:55 -0000
vti_timelastmodified:TR|29 Nov 2000 12:34:55 -0000
vti_backlinkinfo:VX|seiten/ski2.htm seiten/maskeng.htm seiten/party.htm seiten/ski3.htm seiten/geste1e.htm
vti_extenderversion:SR|4.0.2.2717
